--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Калькулятор ЛАЭ</title>
 </head>
 <body>
-<div id="wrapper" class="mx-auto">
+<div id="wrapper" class="mx-auto p-2">
     <h1 class="text-center py-2 my-2">Классификатор ЛАЭ</h1>
     <form id="form1" class="form-control my-1 py-2">
         <div class="form-check form-check-reverse form-switch ps-0 ">
