--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <tr title="ЛАЭ 1 уровень — определение СЛУ
 Показания: нет признаков метастатического поражения лимфатических узлов по данным обследований — МРТ/КТ малого таза, опухоль до 4см с латеральным расположением. При невозможности выполнения методики определения СЛУ переход на ЛАЭ 2 уровня.">
                     <th scope="row">I</th>
-                    <td>Биопсия сторожевого лимфатического узла со срочной гистологией</td>
+                    <td>Биопсия сторожевого лимфатического узла со срочным гистологическим исследованием</td>
                 </tr>
                 <tr title="ЛАЭ 2 уровень-поверхностная (модифицированная, надфасциальная ЛАЭ). 
 Показания: нет признаков метастатического поражения лимфатических узлов по данным обследований — МРТ/КТ малого таза, опухоль до 4см с центральным расположением, невозможность выполнения методики определения СЛУ.">
