--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </form>
     <form id="form3" style="display:none;" class="add-forms form-control my-1 py-2">
         <div class="form-check ps-0 overflow-y-auto">
-            <label for="meta-y" class="form-check-label float-start pe-3">При срочной гистологии есть метастатическое поражение?</label>
+            <label for="meta-y" class="form-check-label float-start pe-3">При срочном гистологическом исследовании есть метастатическое поражение?</label>
             <input type="checkbox" id="meta-y" name="meta" class="form-check-input float-end">
         </div>
         <div class="col-12 mt-3">
