--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 <div id="wrapper" class="mx-auto p-2">
     <div id="line" class="row py-2 my-2 px-3">
-        <h1 class="col text-center float-start">Классификатор ЛАЭ</h1>
-        <button title="Сбросить" class="btn btn-link col col-1 float-end" onClick="window.location.href=window.location.href">
+        <h1 class="text-center float-start col col-9">Классификатор ЛАЭ</h1>
+        <button title="Сбросить" class="btn btn-link float-end col col-lg-2" onClick="window.location.href=window.location.href">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M142.9 142.9c62.2-62.2 162.7-62.5 225.3-1L327 183c-6.9 6.9-8.9 17.2-5.2 26.2s12.5 14.8 22.2 14.8H463.5c0 0 0 0 0 0H472c13.3 0 24-10.7 24-24V72c0-9.7-5.8-18.5-14.8-22.2s-19.3-1.7-26.2 5.2L413.4 96.6c-87.6-86.5-228.7-86.2-315.8 1C73.2 122 55.6 150.7 44.8 181.4c-5.9 16.7 2.9 34.9 19.5 40.8s34.9-2.9 40.8-19.5c7.7-21.8 20.2-42.3 37.8-59.8zM16 312v7.6 .7V440c0 9.7 5.8 18.5 14.8 22.2s19.3 1.7 26.2-5.2l41.6-41.6c87.6 86.5 228.7 86.2 315.8-1c24.4-24.4 42.1-53.1 52.9-83.7c5.9-16.7-2.9-34.9-19.5-40.8s-34.9 2.9-40.8 19.5c-7.7 21.8-20.2 42.3-37.8 59.8c-62.2 62.2-162.7 62.5-225.3 1L185 329c6.9-6.9 8.9-17.2 5.2-26.2s-12.5-14.8-22.2-14.8H48.4h-.7H40c-13.3 0-24 10.7-24 24z"/></svg>
         </button>
     </div>
@@ -29,18 +29,18 @@
         <div></div>
         <div class="input-group py-1">      
             <span class="input-group-text col col-9">Размер опухоли при наибольшем измерении</span>       
-            <input type="number" step=0.1 id="size" name="size" class="form-control col" required>
-            <span class="input-group-text col col-1">см</span>
+            <input type="number" step=0.1 id="size" name="size" class="form-control" required>
+            <span class="input-group-text">см</span>
         </div>
         <div class="input-group py-1">
             <span class="input-group-text col col-9">Глубина инвазии</span>  
-            <input type="number" step=0.1 id="depth" name="depth" class="form-control col" required>
-            <span class="input-group-text col col-1">мм</span>
+            <input type="number" step=0.1 id="depth" name="depth" class="form-control" required>
+            <span class="input-group-text">мм</span>
         </div>
         <div class="input-group py-1">
             <span class="input-group-text col col-9">Расстояние от центральной линии</span>
-            <input type="number" step=0.1 id="dist" name="dist" class="form-control col" required>
-            <span class="input-group-text col col-1">см</span>
+            <input type="number" step=0.1 id="dist" name="dist" class="form-control" required>
+            <span class="input-group-text">см</span>
         </div>      
         <div class="col-12 mt-2">
             <button type="submit" class="btn btn-outline-primary" type="submit">Рассчитать</button>
